<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <ImageButton
        android:id="@+id/editButtonMood"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outputMood"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageButton
        android:id="@+id/editButtonDept"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outputDept"
        app:srcCompat="@drawable/ic_action_edit" />

    <ImageButton
        android:id="@+id/editButtonEmail"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outputEmail"
        app:srcCompat="@drawable/ic_action_edit" />

    <TextView
        android:id="@+id/textViewStudentInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/studentInto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudentInfo" />

    <TextView
        android:id="@+id/textViewEmailDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameDisplay" />

    <TextView
        android:id="@+id/textViewDeptDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/dept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailDisplay" />

    <TextView
        android:id="@+id/textViewMoodDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeptDisplay" />

    <TextView
        android:id="@+id/outputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewNameDisplay"
        app:layout_constraintTop_toTopOf="@+id/textViewNameDisplay" />

    <TextView
        android:id="@+id/outputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewEmailDisplay"
        app:layout_constraintTop_toTopOf="@+id/textViewEmailDisplay" />

    <TextView
        android:id="@+id/outputDept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewDeptDisplay"
        app:layout_constraintTop_toTopOf="@+id/textViewDeptDisplay" />

    <TextView
        android:id="@+id/outputMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewMoodDisplay"
        app:layout_constraintTop_toTopOf="@+id/textViewMoodDisplay" />

    <ImageButton
        android:id="@+id/editButtonName"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outputName"
        app:srcCompat="@drawable/ic_action_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>